--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-    "name": "ft-source-grid-item",
-    "description": "An element that renders a FileThis source in a grid list.",
-    "main": "ft-source-grid-item.html",
-    "dependencies": {
-        "polymer": "Polymer/polymer#^1.4.0"
-    },
-    "devDependencies": {
-        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-        "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-        "web-component-tester": "^4.0.0",
-        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
-    }
+  "name": "ft-source-grid-item",
+  "description": "An element that renders a FileThis source in a grid list.",
+  "main": "ft-source-grid-item.html",
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.4.0",
+    "iron-label": "PolymerElements/iron-label#^1.0.2"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+  }
 }
