--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,11 @@
   "description": "An element that renders a FileThis source in a grid list.",
   "main": "ft-source-grid-item.html",
   "dependencies": {
-    "ft-element-demo": "filethis/ft-element-demo#^0.0.9",
+    "ft-element-demo": "filethis/ft-element-demo#^0.0.10",
     "iron-label": "PolymerElements/iron-label#1 - 2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
+    "paper-tooltip": "PolymerElements/paper-tooltip#1 - 2",
+    "web-animations-js": "web-animations-js#^2.2.0",
     "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
