--- a/bower.json
+++ b/bower.json
@@ -4,16 +4,16 @@
   "main": "ft-source-grid-item.html",
   "dependencies": {
     "ft-element-demo": "filethis/ft-element-demo#^1.0.14",
-    "iron-label": "PolymerElements/iron-label#1 - 2",
-    "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
-    "paper-tooltip": "PolymerElements/paper-tooltip#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2"
+    "iron-label": "PolymerElements/iron-label#2.1.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#2.2.0",
+    "paper-tooltip": "PolymerElements/paper-tooltip#2.1.1",
+    "polymer": "Polymer/polymer#^2.7.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#1 - 2",
-    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.1.2",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#2.0.1",
+    "web-component-tester": "Polymer/web-component-tester#^6.5.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.2.7"
   }
  }
