--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "description": "An element that renders a FileThis source in a grid list.",
-  "name": "filethis/ft-source-grid-item",
-  "version": "filethis/1.0.24",
+  "name": "ft-source-grid-item",
+  "version": "1.0.24",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
